--- a/SpringBootV2.7.18/pom.xml
+++ b/SpringBootV2.7.18/pom.xml
@@ -70,6 +70,11 @@
             <version>1.1.21</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.8.15</version>
