--- a/SpringBootV2.7.18/src/main/resources/application.yml
+++ b/SpringBootV2.7.18/src/main/resources/application.yml
@@ -8,3 +8,20 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  main:
+    banner-mode: off
+
+# Mybatis配置
+mybatis:
+  mapper-locations: classpath:mapper/*.xml #指定Mybatis的Mapper文件
+  type-aliases-package: com.zengyanyu.*.entity  #指定Mybatis的实体目录
+
+  configuration:
+    # 强制指定使用SLF4J（logback基于SLF4J）输出日志，不使用其他日志框架
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+# 如果你用的是MyBatis-Plus，添加以下配置（二选一即可）
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+  global-config:
+    banner: off
